fix: update overlay visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ img {
   top: 40px;
   left: 77%;
   font-size: 1.5rem;
+  color: white;
 }
 
 .title {
